# zlab_robots_ROS2

./: .gitignore  README.md
config/: robot_arms.yaml  single_left_arm_config.yaml  single_right_arm_config.yaml  zlab_robots_config.yaml
docs/: progress_notes.md
src/zlab_robot_description/: CMakeLists.txt  README.md  package.xml
src/zlab_robot_description/config/: robot_config.yaml  robot_config_default.yaml  robot_config_dual_arm.yaml  robot_config_single_arm.yaml  view_robot.rviz  zlab_robots_config.yaml
src/zlab_robot_description/launch/: generate_urdf.sh  zlab_robot_rviz.launch.py
src/zlab_robot_description/meshes/collision/: plant_link.STL  toolA-250mm.STL
src/zlab_robot_description/meshes/tool/: toolA-300mm.STL
src/zlab_robot_description/urdf/: initial_positions.yaml  zlab_robot.urdf  zlab_robot.urdf.xacro  zlab_robot_dual_arm.ros2_control.xacro  zlab_robot_dual_arm.urdf  zlab_robot_dual_arm.urdf.xacro  zlab_robot_single_arm.urdf  zlab_robot_single_arm.urdf.xacro
src/zlab_robot_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
src/zlab_robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  joint_limits_dual_arm.yaml  kinematics.yaml  moveit_controllers_dual_arm.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  zlab_robot.ros2_control.xacro  zlab_robot.srdf  zlab_robot.urdf.xacro  zlab_robot_dual_arm.srdf  zlab_robot_dual_arm.urdf  zlab_robot_single_arm.srdf  zlab_robot_single_arm.urdf
src/zlab_robot_moveit_config/config/dual_arm/: initial_positions.yaml  ros2_controllers.yaml
src/zlab_robot_moveit_config/config/single_arm/: moveit_controllers.yaml  ros2_controllers.yaml  zlab_robot_single_arm.ros2_control.xacro
src/zlab_robot_moveit_config/launch/: demo.launch.py  demo_dual_arm.launch.py  demo_single_arm.launch.py  move_group.launch.py  moveit_demo.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/zlab_robot_moveit_config/rviz/: moveit.rviz
src/zlab_robot_moveit_config_single/: .setup_assistant  CMakeLists.txt  package.xml
src/zlab_robot_moveit_config_single/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  zlab_robot_single_arm.srdf  zlab_robot_single_arm.urdf.xacro
src/zlab_robot_moveit_config_single/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py
