<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zlab_robot_description</name>
  <version>1.0.0</version>
  <description>zlab机器人描述包 - 仅包含URDF模型和基础描述信息</description>
  
  <maintainer email="lawkaho@example.com">lawkaho</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- 仅包含必要的依赖 -->
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>python3-yaml</depend>
  
  <!-- Launch 相关 -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  
  <!-- 可视化 -->
  <depend>rviz2</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>